Eliminate deprecate Double() constructor call.